fixed most of the spacing, margins, and padding

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
 html  {
   background-color: #3c9ac6;
 }
-h1 {
+header {
   background-color: darkorange;
-  padding: 0.5em 2em 0.5em 3em;
-  margin:0;
-  text-align: none;
+  padding: 0.1em;
+  margin: .3em 0em .3em 0em;
+}
+h1 {
+  text-align: center;
   font-weight: normal; /* normal, bold */
   font-size: 3.5rem; /* 16 is normal font */
   font-style: none; /* normal, italic */
@@ -22,15 +24,14 @@ h2{
 
 li {
   font-weight:normal;
-
-  ul {
+}
+ul {
     list-style-type: lower-roman;
   }
   figcaption{
     font-style: italic;
     color: white;
   }
-  padding: 0;
 }
 ol {
   list-style-type: none;
@@ -55,7 +56,7 @@ a:hover {
 
 p{
   font-family: arial; san serif;
-  font-size: .7rem;
+  font-size: 1.2rem;
   color:white;
 }
 
@@ -73,7 +74,19 @@ footer {
 dt {
   font-weight:bold;
   font-family: Arial;
+  font-size: 1.2rem;
+  margin: 0.5em 0em 0em 0em;
 }
+
+dl{
+  margin: 0em;
+}
+
+dd{
+font-size: 1.2rem;
+}
+
+
 
 .quote {
   font-size: 1.5rem;
@@ -93,7 +106,7 @@ nav li{
 
 nav a{
   display: inline-block;
-  padding:1em 1em;
+  padding:.7em;
   background-color: black;
   color: white;
   margin: 0em;
@@ -111,4 +124,16 @@ nav ol{
 img{
   width: 100%
 
+}
+
+figure{
+  border: 2px solid grey;
+  padding: .7em;
+  border-radius: 7px;
+}
+
+.src{
+  background-color: black;
+padding:0em 1em;
+margin:0em;
 }
